Add WebSocket Endpoint for Expiration Events
A tiny bit of cleanup too :)